--- a/index.html
+++ b/index.html
@@ -3,10 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="./styles.css">
     <title>Muskaan</title>
 </head>
 <body>
-    <h1>Muskaan Sheikh</h1>
-    
+    <h1></h1>
+    <main>
+        <section data-aos="fade-right" id="intro" class="hero">
+          <div class="heroText">
+            <p class="topData">Hey, I'm</p>
+            <h1 class="title">Muskaan Sheikh</h1>
+            <p class="heroData">I'm a Django Developer.</p>
+            <!-- <a
+              class="btn resume"
+              href="./assets/Shubham Pawar Resume(Novo).pdf"
+              target="_blank"
+            > -->
+              <span class="View">View</span> Resume{" "}
+            </a>
+          </div>
+          <div class="heroImg">
+            <img class="heroGif" src={hero} alt="hero img" />
+          </div>
+        </section>
+      </main>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="./index.js"></script>
 </body>
 </html>
